--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,20 @@
 * {
-background-color: #FFC0CB
+
 }
 
-h1 {
+body {
+	background-color:#e3ded1
+}
 
+
+h1 {
+	color:transparent;
+    font-family: Palatino;
+    margin-top: 50px;
+    margin-left: 30px; font-size:700%;
+    -webkit-text-stroke-color:#fc4503;
+    -webkit-text-stroke-width:1px;
+    transform: translate(-70,+60);
+
+ 
 }
