--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,21 @@ body {
 
 
 h1 {
-	color:transparent;
-    font-family: Palatino;
+	color:#fc4503;
+    font-family: Franklin Gothic;
     margin-top: 50px;
     margin-left: 30px; font-size:700%;
-    -webkit-text-stroke-color:#fc4503;
-    -webkit-text-stroke-width:1px;
-    transform: translate(-70,+60);
+   
 
  
+}
+
+
+
+ul {
+
+	 font-family: Franklin Gothic;
+	 margin-top: 50px;
+    margin-left: 30px;
+
 }
