--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@ ul {
 
 	 font-family: Franklin Gothic;
 	 margin-top: 50px;
-    margin-left: 30px;
+     margin-left: 30px;
+     font-size: 300%;
+
 
 }
