--- a/code-exercises/css/style.css
+++ b/code-exercises/css/style.css
@@ -16,3 +16,15 @@ h1 {
 
  
 }
+
+
+
+ul {
+
+	 font-family: Franklin Gothic;
+	 margin-top: 50px;
+     margin-left: 30px;
+     font-size: 200%;
+
+
+}
