--- a/code-exercises/css/style.css
+++ b/code-exercises/css/style.css
@@ -32,16 +32,14 @@ ul {
 
 
 .button1 {
-  border: none;
+   border: none;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+  background-color: #4CAF50
 }
 
 
-.button1 {background-color: #4CAF50;}
