--- a/code-exercises/css/style.css
+++ b/code-exercises/css/style.css
@@ -1,8 +1,3 @@
-* {
-
-}
-
-
 .button {
   border: none;
   color: white;
@@ -11,7 +6,7 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  background-color: #4CAF50
+  background-color: #4CAF50;
 }
 
 
@@ -19,7 +14,7 @@
 
 
 body {
-	background-color:#e3ded1
+	background-color:#e3ded1;
 }
 
 
@@ -28,9 +23,7 @@ h1 {
     font-family: Franklin Gothic;
     margin-top: 50px;
     margin-left: 30px; font-size:700%;
-   
-
- 
+    
 }
 
 
@@ -41,7 +34,6 @@ ul {
 	 margin-top: 50px;
      margin-left: 30px;
      font-size: 200%;
-
 
 }
 
