--- a/code-exercises/css/style.css
+++ b/code-exercises/css/style.css
@@ -1,16 +1,16 @@
-.button {
+button {
   border: none;
   color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
   background-color: #4CAF50;
+  padding:1em 2em 1em 2em;
 }
 
 
-
+.padding-hover:hover {
+	background-color: green;
+	color:white;
+	text-decoration: underline;
+}
 
 
 body {
