--- a/code-exercises/css/style.css
+++ b/code-exercises/css/style.css
@@ -17,7 +17,7 @@ button {
 
 .container {
 
-	background-image: url(../joe-smile.jpg);
+	background-image: url(../img/joe-smile.jpg);
 	background-size: cover;
 	height:700px;
 	margin:0 auto;
@@ -39,6 +39,10 @@ button {
 		background-color: MediumSeaGreen;
 	}
 }
+
+
+
+
 
 
 body {
