--- a/code-exercises/css/style.css
+++ b/code-exercises/css/style.css
@@ -17,7 +17,7 @@ button {
 
 .container {
 
-	background-image: url(https://github.com/ranyewest/gra-321/blob/master/code-exercises/img/joe-smile%20.JPG?raw=true);
+	background-image: url(github.com/ranyewest/gra-321/blob/master/code-exercises/img/joe-smile%20.JPG);
 	background-size: cover;
 	height:700px;
 	margin:0 auto;
