--- a/code-exercises/css/style.css
+++ b/code-exercises/css/style.css
@@ -24,7 +24,7 @@ button {
 
 .container {
 
-	background-image: url(https://github.com/ranyewest/gra-321/blob/master/code-exercises/img/joe-smile%20.JPG?raw=true);
+	background-image: url(https://github.com/ranyewest/gra-321/blob/master/code-exercises/img/joe-smile.JPG?raw=true);
 	background-size: contain;
 	background-repeat: no-repeat;
 	height: 700px;
