--- a/hello-world/css/style.css
+++ b/hello-world/css/style.css
@@ -16,3 +16,20 @@ h1 {
 
  
 }
+
+h2 {
+    font-family: Franklin Gothic;
+    margin-top: 50px;
+    margin-left: 30px; font-size:200%;
+
+}
+
+ul {
+
+	 font-family: Franklin Gothic;
+	 margin-top: 50px;
+     margin-left: 30px;
+     font-size: 200%;
+
+
+}
