--- a/code-exercises/magazine-layout/css/style.css
+++ b/code-exercises/magazine-layout/css/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color:#e3ded1;
+	background-color: white;
 }
 
 
@@ -15,13 +15,10 @@ h1 {
 }
 
 
-.bathroom {
+.container {
 
-	background-image: url(https://github.com/ranyewest/gra-321/blob/master/code-exercises/magazine-layout/img/bathroom.png?raw=true);
-	background-size: contain;
-	background-repeat: no-repeat;
-	height: 700px;
-	margin:0 auto;
-	width:50%;
+	margin: 20 auto;
+	padding-left:6%;
+	padding:6%;
 
 }
