--- a/code-exercises/css/style.css
+++ b/code-exercises/css/style.css
@@ -36,7 +36,7 @@ button {
 
 .layout {
 
-	background-image: url(https://github.com/ranyewest/gra-321/blob/master/code-exercises/img/Custom%20Size%20%E2%80%93%201.png?raw=true);
+	background-image: url(https://github.com/ranyewest/gra-321/blob/master/code-exercises/img/Elqadah_newlayout2.png?raw=true);
 	background-size: contain;
 	background-repeat: no-repeat;
 	height: 700px;
@@ -48,7 +48,7 @@ button {
 
 .iphone {
 
-	background-image: url(https://github.com/ranyewest/gra-321/blob/master/code-exercises/img/Elqadah_newlayout2.png?raw=true);
+	background-image: url(https://github.com/ranyewest/gra-321/blob/master/code-exercises/img/iPhone%20X,%20XS,%2011%20Pro%20%E2%80%93%201.png?raw=true);
 	background-size: contain;
 	background-repeat: no-repeat;
 	height: 700px;
