--- a/code-exercises/magazine-layout/css/style.css
+++ b/code-exercises/magazine-layout/css/style.css
@@ -58,7 +58,7 @@ p3 {
 
 	margin: 20 auto;
 	padding-left: 6%;
-	padding-right: :6%;
+	padding-right: 6%;
 	padding-bottom: 3%;
 
 }
@@ -121,7 +121,7 @@ p3 {
 	height: 396px;
 	width: 1088px;
 	margin: 20 auto;
-	margin-bottom: 6%
+	margin-bottom: 6%;
 }
 
 
