--- a/responsive-project/css/style.css
+++ b/responsive-project/css/style.css
@@ -5,11 +5,98 @@ body {
 
 h1 {
 	color:#403F3F;
-	text-align: right;
     font-family: segoe UI;
     margin-top: 50px;
-    margin-left: 30px; font-size:80px;
+    margin-left: 30px; font-size:230%;
 	}
+
+
+
+	h2 {
+		color:#403F3F;
+	    font-family: segoe UI;
+	    margin-top: 50px;
+	    font-size:200;
+		}
+
+
+
+		h3 {
+			color:#403F3F;
+				font-family: segoe UI;
+				margin-top: 50px;
+				font-size:80;
+			}
+
+
+
+			h4 {
+				color:#403F3F;
+					font-family: segoe UI;
+					font-size:80;
+				}
+
+
+
+			p1	{
+				color:#403F3F;
+				font-family: segoe UI;
+				font-size:50;
+
+			}
+
+
+			p2	{
+				color:#403F3F;
+				font-family: segoe UI;
+				font-size:50;
+
+			}
+
+			p3	{
+				color:#403F3F;
+				font-family: segoe UI;
+				font-size:50;
+
+			}
+
+
+			p4	{
+				color:#403F3F;
+				font-family: segoe UI;
+				font-size:50;
+
+			}
+
+
+			p5 {
+
+				color:#403F3F;
+				font-family: segoe UI;
+				font-size:50;
+
+			}
+
+
+			p6 {
+
+				color:#403F3F;
+				font-family: segoe UI;
+				font-size:50;
+				margin-left: 5%;
+			}
+
+
+
+
+
+		.header-container {
+
+		  margin: auto;
+			background-color: transparent;
+			height: 65px;
+			text-align:center;
+		}
 
 
 
@@ -22,23 +109,111 @@ h1 {
 }
 
 
-.header-container {
 
-  margin: auto;
+
+.container {
+	margin-left: 1%;
+}
+
+
+.gallery-1 {
+	display: inline-block;
+	margin-left: 5%;
+	margin-right: 3%;
+	margin-bottom: 3%;
+}
+
+.gallery-2 {
+	display: inline-block;
+	margin-right: 3%;
+	margin-bottom: 3%;
+}
+
+
+.gallery-3 {
+	display: inline-block;
+	margin-left: 5%;
+	margin-right: 3%;
+	margin-bottom: 3%;
+}
+
+.gallery-4 {
+	display: inline-block;
+	margin-right: 3%;
+	margin-bottom: 3%;
+}
+
+
+
+.sub-header-container {
+	background-color: transparent;
+	height: 20px;
+	margin-left: 5%;
+	margin-bottom: 3%;
+}
+
+
+
+
+
+
+.menu-items {
+	display: inline-block;
 	background-color: transparent;
 	height: 65px;
-	width:699px;
-	text-align: center;
+	margin-left: 5%;
 
 }
 
 
 
-.container {
 
-	margin: 20 auto;
-	padding-left: 6%;
-	padding-right: 6%;
-	padding-bottom: 3%;
+.prices-S {
+	display: inline-block;
+	background-color: transparent;
+	height: 65px;
+	margin-left: 7%;
+
+}
+
+.prices-M {
+	display: inline-block;
+	background-color: transparent;
+	height: 65px;
+	margin-left: 3%;
+}
+
+
+.prices-L {
+	display: inline-block;
+	background-color: transparent;
+	height: 65px;
+	margin-left: 3%;
+}
+
+.prices-special {
+	display: inline-block;
+	background-color: transparent;
+	height: 65px;
+	margin-left: 19%;
+}
+
+
+
+.container02 {
+	margin-left: 5%;
+	margin-top: 15%;
+	margin-bottom: 10%;
+}
+
+
+.about-section {
+margin-left: 5%;
+
+}
+
+
+.about-section1 {
+margin-left: 5%;
 
 }
