--- a/responsive-project/css/style.css
+++ b/responsive-project/css/style.css
@@ -1,5 +1,10 @@
+/*My changes are on lines: */
+
 body {
-	background-color: #F1F1F1
+  margin: 0px;
+  padding:0px;
+	background-color: #F1F1F1;
+  width: 100%; /* Added a width on the body so that your entire content has a parent containter to define their widths off of*/
 }
 
 
@@ -86,18 +91,17 @@ h1 {
 				margin-left: 5%;
 			}
 
-
-
-
-
 		.header-container {
-
-		  margin: auto;
 			background-color: transparent;
 			height: 65px;
 			text-align:center;
+      padding-bottom:10px;
+      width:100%;
 		}
 
+.logo {
+		  margin-bottom: 50px; /*added some margin underneath so it doesn't overlap with the nav-buttons */
+}
 
 
 	button {
@@ -106,22 +110,47 @@ h1 {
   color: #403F3F;
   background-color: #FDDE68;
   padding:1em 2em 1em 2em;
-text-align: center;
+  width:100%;
+}
+/*
+padding:1em 2em 1em 2em;
+  text-align: center;
 	margin-top: 15px;
 	margin-right: 25px;
 	margin-left: 20px;
 	margin-bottom: 10px;
+}
+*/
+
+.nav-buttons {
+  width: 100%;
+  background-color: transparent;
+  margin:20px 0;
+  display:block;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  min-width:300px;
+
+
+}
+
+.nav-buttons a {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+  margin-left: 10px;
 
 }
 
 
 
 
+.container {
+margin-top: 20px;
+width:100%;
+}
 
-
-
-
-
+/* now, we're going to comment out all of the gallery styling of div classes we're deleting in the html
 .gallery-1 {
 	display: inline-flex;
 	margin-left: 5%;
@@ -148,6 +177,21 @@ text-align: center;
 	margin-right: 3%;
 	margin-bottom: 3%;
 }
+*/
+
+.new-gallery {
+display: block; /*enables flexbox*/
+width: 100%; /*ensures the bar takes up 100% of the screen */
+background-color: transparent;
+justify-content: space-between; /*Now the content is spread across the entire width of this div, with even spaces between the content*/
+}
+
+.new-gallery img {
+width:45%; /*now, each image only takes up 20% of the screen, 20x4=80% of the screen total. That leaves us with 20% margin to spread bewteen images, since the whole gallery takes up 100% of the screen*/
+flex-wrap: wrap;
+margin-bottom: 15px;
+margin-left: 15px;
+}
 
 
 
@@ -155,15 +199,10 @@ text-align: center;
 	background-color: transparent;
 	height: 20px;
 	margin-left: 5%;
-	margin-bottom: 3%;
+	margin-bottom: 10%;
 }
 
-.sub-header-container-sandwiches {
-	background-color: transparent;
-	height: 20px;
-	margin-left: 5%;
-	margin-bottom: 3%;
-}
+
 
 .sub-header-container02 {
 	background-color: transparent;
@@ -183,15 +222,6 @@ text-align: center;
 
 }
 
-
-
-.menu-items-sand {
-	display: inline-block;
-	background-color: transparent;
-	height: 65px;
-	margin-left: 5%;
-
-}
 
 
 
@@ -226,19 +256,6 @@ text-align: center;
 }
 
 
-.prices-special-sand {
-	display: inline-block;
-	background-color: transparent;
-	height: 65px;
-	margin-left: 19%;
-}
-
-
-.container02 {
-	margin-left: 5%;
-	margin-top: 15%;
-	margin-bottom: 10%;
-}
 
 
 .about-section {
@@ -254,11 +271,106 @@ margin-left: 5%;
 
 }
 
+.menu-row-1, .menu-row-2, .menu-row-3, .hours-row-1, .hours-row-2 {
+width: 100%;
+  }
+
+
+.hotdrinks_move, .sandwiches_move, .hotteas_move, .drinkspecials_move, .iceddrinks_move, .iceteas_move, .hayden_move, .bio_move, .design_move, .logo_move{
+  background-color: transparent;
+  width: 100%;
+}
+
+
+
+
+
+
+/*mobile Styles*/
+@media only screen and (min-width: 200px) {
+
+  .container02{
+    margin-top: 15%;
+    margin-left: 5%;
+  }
+
+
 
 
 
 /*Desktop Styles*/
 @media only screen and (min-width: 700px) {
+
+  .logo {
+    margin-bottom: 50px;
+  }
+
+  .button {
+  		padding: 1em 5em 1em 5em;
+  		margin-top: 15px;
+  		margin-right: 25px;
+  		margin-left: 20px;
+  		margin-bottom: 10px;
+    display: inline-block;
+    width: 20%;
+    }
+
+    .gallery-1 {
+    flex-wrap:nowrap;
+    position: relative;
+    	}
+
+
+    	.gallery-2 {
+    			flex-wrap:nowrap;
+    			position: relative;
+    	}
+
+    	.gallery-3 {
+    		flex-wrap:nowrap;
+    		position: relative;
+    	}
+
+    	.gallery-4 {
+    			flex-wrap:nowrap;
+    			position:relative;
+    	}
+
+      .new-gallery {
+    display: flex; /*enables flexbox*/
+    width: 100%; /*ensures the bar takes up 100% of the screen */
+    background-color: transparent; /*just here to help the visual, you can remove this */
+    justify-content: space-between; /*Now the content is spread across the entire width of this div, with even spaces between the content*/
+    }
+
+    .new-gallery img {
+    width:20%; /*now, each image only takes up 20% of the screen, 20x4=80% of the screen total. That leaves us with 20% margin to spread bewteen images, since the whole gallery takes up 100% of the screen*/
+    }
+
+
+
+    .nav-buttons {
+      width: 100%;
+      background-color: transparent; /*just here to help the visual, you can remove this */
+      margin:20px 0;
+      display:flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      min-width:300px;
+    }
+
+
+
+    .nav-buttons a {
+    display:inline-block;
+    width: 20%;
+    margin-top: 20px;
+    }
+
+
+
+
+
 
 h1 {
 	font-size: 350%;
@@ -268,107 +380,38 @@ h1 {
 
 h2 {
 	font-size: 300%;
-	margin-bottom: 50px;
+	margin-bottom: 80px;
 }
 
-h3 {
-	font-size: 200%;
-}
-
-
-p1 {
-	font-size: 100%;
+h3, h4 {
+	font-size: 30px;
+  margin-bottom: 20px;
 }
 
 
-	.button {
-		padding: 1em 5em 1em 5em;
-		margin-top: 15px;
-		margin-right: 25px;
-		margin-left: 20px;
-		margin-bottom: 10px;}
-
-
-	.gallery-1 {
-flex-wrap:nowrap;
-position: relative;
-	}
-
-
-	.gallery-2 {
-			flex-wrap:nowrap;
-			position: relative;
-	}
-
-	.gallery-3 {
-		flex-wrap:nowrap;
-		position: relative;
-	}
-
-	.gallery-4 {
-			flex-wrap:nowrap;
-			position:relative;
-	}
-
-
-
-
-
-
-.hotdrinks_move{
-	display: inline-block;
-	width: 100%;
+p1, p2, p3, p4, p5, p6 {
+	font-size: 20px;
 }
 
 
 
 
+.menu-row-1, .menu-row-2, .menu-row-3, .hours-row-1, .hours-row-2 {
+  display:flex;
+  justify-content: space-between;
+  }
 
 
-
-.sub-header-container-sandwiches{
-	display: inline-block;
+.hotdrinks_move, .sandwiches_move, .hotteas_move, .drinkspecials_move, .iceddrinks_move, .iceteas_move, .hayden_move, .bio_move, .design_move, .logo_move {
+  background-color: transparent;
+  width: 50%;
+  margin-left: 100px;
 }
 
 
-.sandwiches_move{
-	display: inline-block;
+.container {
+  margin-top: 20px;
 }
 
-.menu-items-sand {
-	display: inline-block;
-	width: 100%;
-}
-
-
-.prices-special-sand {
-	display: inline-block;
-}
-
-
-
-
-
-
-
-
-.design_north{
-	display: inline-block;
-	width: 100%;
-}
-
-
-
-.bio_move {
-display: inline-block;
-width: 100%;
-margin-left: 300px;
-
-
-}
-
-.sub-header-container02 {
-display: inline-block;
-}
 
 }
